...
        android:layout_gravity="top"
        android:layout_margin="@dimen/container_margin"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <AutoCompleteTextView
            android:id="@+id/textSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_widget_margin"
            android:background="@android:color/transparent"
            android:hint="@string/text_hint_driver"
            android:inputType="textNoSuggestions"
...

    </android.support.v7.widget.CardView>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/white"
        app:srcCompat="@drawable/ic_my_location" />
...
